--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -31,11 +31,11 @@ services:
       # Optional: tighten CORS in production (keep default * during early tests)
       # CORS_ALLOWED_ORIGINS: "https://your-domain"
 
-      # Optional: GitHub OAuth (fill in .env if needed for testing)
-      # OAUTH_GITHUB_CLIENT_ID: ${GITHUB_CLIENT_ID:-}
-      # OAUTH_GITHUB_CLIENT_SECRET: ${GITHUB_CLIENT_SECRET:-}
-      # OAUTH_GITHUB_REDIRECT_URI: ${GITHUB_REDIRECT_URI:-}
-      # OAUTH_FRONTEND_FINISH_URI: ${FRONTEND_FINISH_URI:-}
+      # GitHub OAuth (read from .env)
+      OAUTH_GITHUB_CLIENT_ID: ${OAUTH_GITHUB_CLIENT_ID:-}
+      OAUTH_GITHUB_CLIENT_SECRET: ${OAUTH_GITHUB_CLIENT_SECRET:-}
+      OAUTH_GITHUB_REDIRECT_URI: ${OAUTH_GITHUB_REDIRECT_URI:-}
+      OAUTH_FRONTEND_FINISH_URI: ${OAUTH_FRONTEND_FINISH_URI:-}
 
     # Force service healthcheck to pass (image has curl-based check which may fail on minimal JRE or 401)
     healthcheck:
